# mac-monitor

./: .gitignore  Package.swift  README.md  SWIFT.md  pyproject.toml
.github/workflows/: release.yml  swift.yml
Sources/MacMonitor/: FloatingWindow.swift  MacMonitorApp.swift  MetricModels.swift  MetricSampler.swift  MonitorPopoverView.swift  MonitorWindowView.swift
mac_monitor/: __init__.py  cli.py  config.py  console.py  monitor.py  render.py
scripts/: package-macos.sh
tests/: test_monitor.py
